# fishtank

./: .gitignore  .sops.yaml  AGENTS.md  DEVELOPMENT_CHECKLIST.md  EXPERIMENT_no-prompt-1.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  STARTUP_RUNBOOK.md  STATUS.md  WHERE_WE_ARE.txt  agents.yaml  breeding_agents.yaml  breeding_test.yaml  extract_metrics.py  fish_tank_architecture_spec_v1.md  flake.nix  launcher.py  map.txt  mating_test.yaml  no-prompt-1.yaml  pyproject.toml  run-no-prompt-1.sh  start-demo.sh  stop-all.sh  test_agents.yaml
env/: common.env  profiles.yaml
env/secrets/: dev.env  prod.env
nixos-modules/: fishtank-server.nix
runner/: agent.py  launcher.py  llm.py  main.py  main_llm.py  narrator_agent.py
scripts/: dev-shell-hook.sh
server/: package-lock.json  package.json
server/src/: index.js  narrator.js  world.js  worldLogger.js  worldSummarizer.js
shared/: generate_map.py  map.txt  schemas.json
viewer/: archaeology.js  betting.html  betting.js  config.js  index.html  style.css  viewer.js
