[project]
name = "fishtank-runner"
version = "0.1.0"
description = "Fish Tank Agent Runner - LLM-powered agent for turn-based simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[project.scripts]
agent = "runner.main:main"
agent-llm = "runner.main_llm:main"